# responcer

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  main.yaml
responcer/: run.py  test.py
responcer/templates/: index.html
templates/: index.html
