[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "responcer"
dynamic = ["version"]
description = "Service return headers from client with real ip address."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Vlad Tara", email = "vlad@glaps.fun" }]
maintainers = [{ name = "Vlad Tara", email = "vlad@glaps.fun" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anyio>=3.6.1",
    "click>=8.1.3",
    "fastapi>=0.79.0",
    "Jinja2>=3.1.2",
    "pydantic>=1.9.1",
    "uvicorn>=0.18.2",
    "psutil>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/vladtara/responcer"
Documentation = "https://responcer.glaps.fun/docs"
Source = "https://github.com/vladtara/responcer"

[project.scripts]
responcer = "responcer.run:main"

[tool.hatch.version]
path = "responcer/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["*"]

[tool.hatch.build.targets.wheel]
packages = ["responcer"]

[tool.hatch.build.targets.responcer]
require-runtime-dependencies = true

[tool.hatch.build.targets.your-target-name]
dependencies = [
    "anyio>=3.6.1",
    "click>=8.1.3",
    "fastapi>=0.79.0",
    "Jinja2>=3.1.2",
    "pydantic>=1.9.1",
    "uvicorn>=0.18.2",
    "psutil>=7.0.0",
]